@@ -21,7 +21,7 @@
 	 * 
 	 * @ingroup Cache
 	**/
-	final class Memcached extends CachePeer implements Creatable
+	final class Memcached extends CachePeer
 	{
 		const DEFAULT_PORT		= 11211;
 		const DEFAULT_HOST		= '127.0.0.1';
