@@ -16,7 +16,7 @@
 	 * 
 	 * @ingroup Form
 	**/
-	class FilterChain implements Filtrator, Creatable
+	class FilterChain implements Filtrator
 	{
 		protected $chain = array();
 
