@@ -18,7 +18,7 @@
 	 * 
 	 * @see http://onphp.org/examples.Form.en.html
 	**/
-	final class Form extends RegulatedForm implements Creatable
+	final class Form extends RegulatedForm
 	{
 		const WRONG 		= 0x0001;
 		const MISSING 		= 0x0002;
