@@ -14,7 +14,7 @@
 	/**
 	 * @ingroup Filters
 	**/
-	class PCREFilter implements Filtrator, Creatable
+	class PCREFilter implements Filtrator
 	{
 		private $search 	= null;
 		private $replace	= null;
