@@ -16,7 +16,7 @@
 	 *
 	 * @ingroup Helpers
 	**/
-	class CalendarWeek implements Creatable
+	class CalendarWeek
 	{
 		// TODO: quite empty class, consider replacement or pull up all methods
 		private $days = array();
