@@ -1,5 +1,9 @@
 # $Id$
 
+2006-04-11	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+	* core/Base/Creatable.class.php: deprecated.
+
 2006-04-09	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 	* 0.2.11 released.
